@@ -6,6 +6,8 @@
 - Orthographic cameras allow a Near Clip of 0
 - Bugfix: collider was pushing camera too far if there were multiple overlapping obstacles
 - Bugfix: use IsAssignableFrom instead of IsSubclass in several places
+- Bugfix: when interrupting a blend in progress, Cut was not respected
+
 
 <size=20><b>Version 2.2.8</b></size>
 
